--- a/flair.css
+++ b/flair.css
@@ -5,7 +5,7 @@
 }
 
 #bar {
-    background-color: #AFFFB3;
+    background-color: #e5ecf9;
     background-image: url('https://translate-widget.identitylabs.org/translate.png');
     background-size: auto 24px;
     background-position: 3px center;
